--- a/index.html
+++ b/index.html
@@ -9,16 +9,9 @@
 
 		<!-- Le styles -->
 		<link href="css/bootstrap.min.css" rel="stylesheet">
-		<style>
-			body {
-				padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
-			}
-		</style>
 		<link href="css/agency.css" rel="stylesheet">
 		<link href="font-awesome-4.1.0/css/font-awesome.min.css" rel="stylesheet">
 		<link href="css/style.css" rel="stylesheet">
-
-
 
 		<!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
 		<!--[if lt IE 9]>
@@ -51,7 +44,7 @@
 					<a href="#page-top">Intro</a>
 					</li>
 					<li>
-					<a class="page-scroll" href="#services">Services</a>
+					<a class="page-scroll " href="#services">Services</a>
 					</li>
 					<li>
 					<a class="page-scroll" href="#about">About</a>
@@ -60,9 +53,12 @@
 					<a class="page-scroll" href="#contact">Contact</a>
 					</li>
 					<li>
+					<a class="page-scroll" href="#map">Find Us</a>
+					</li>
+					<li>
 					<a class="page-scroll" href="#accreditation">Accreditation</a>
 					</li>
-				</ul>
+					</ul>
 			</div>
 			<!-- /.navbar-collapse -->
 		</div>
@@ -93,125 +89,156 @@
 			<div class="row">
 				<div class="col-lg-12 text-center claim">
 					<p class="subtitles">
-						overall introduction
+					overall introduction
 					</p>
 				</div>			
 			</div>
 			<div class="row">
 				<div class="col-sm-4 service">
-				<div class="compress">
-					<a>
-						<div class="img-container">
-							<img src="img//whatwedo/Mts-shocker-big1.jpg" class="img-responsive"/>
-							<div class="hover"></div>
-						</div>
-						<div class="info">
-							<h3 class="service-title seciotn-subheading">ESS, HALT/HASS</h3>	
-							<p>ESS, HALT/HASS ,
-							Environmental ,
-							Stress Screening</p>
-						</div>
-					</a>
+					<div class="compress">
+						<a href="testService.html#ESS">
+							<div class="img-container">
+								<img src="img//whatwedo/Mts-shocker-big1.jpg" class="img-responsive"/>
+								<div class="hover"></div>
+							</div>
+							<div class="info">
+								<h3 class="service-title seciotn-subheading">ESS, HALT/HASS</h3>	
+								<p>ESS, HALT/HASS ,
+								Environmental ,
+								Stress Screening</p>
+							</div>
+						</a>
 					</div>
 				</div>
 				<div class="col-sm-4 service">
-								<div class="compress">
+					<div class="compress">
 
-					<a>
-						<div class="img-container">	
-							<img src="img/whatwedo/Mts-shocker-big1.jpg" class="img-responsive"/>
-						</div>
-						<div class="info">
-							<h3 class="service-title seciotn-subheading">Chamber, Test</h3>	
-							<p>Temp, Humidity, Altitude,
-							Thermal Shock ,
-							Thermal Cycling</p>
-						</div>
-					</a>
+						<a href="testService.html#PACKAGE">
+							<div class="img-container">
+								<img src="img/whatwedo/Mts-shocker-big1.jpg" class="img-responsive"/>
+							</div>
+							<div class="info">
+								<h3 class="service-title seciotn-subheading">Package Testing</h3>	
+								<p>Package Testing ,
+								Package Drop ,
+								Package Fragility ,
+								Damage Boundary
+								</p>
+							</div>
+						</a>
 					</div>
 				</div>
 				<div class="col-sm-4 service">
-								<div class="compress">
+					<div class="compress">
 
-					<a>
-						<div class="img-container">
-							<img src="img/whatwedo/Mts-shocker-big1.jpg" class="img-responsive"/>
-						</div>
-						<div class="info">
-							<h3 class="service-title seciotn-subheading">Package Testing</h3>	
-							<p>Package Testing ,
-							Package Drop ,
-							Package Fragility ,
-							Damage Boundary
-							</p>
-						</div>
-					</a>
+						<a href="testService.html#CHAMBER">
+							<div class="img-container">	
+								<img src="img/whatwedo/Mts-shocker-big1.jpg" class="img-responsive"/>
+							</div>
+							<div class="info">
+								<h3 class="service-title seciotn-subheading">Chamber, Test</h3>	
+								<p>Temp, Humidity, Altitude,
+								Thermal Shock ,
+								Thermal Cycling</p>
+							</div>
+						</a>
 					</div>
 				</div>
 				<div class="col-sm-4 service">
-								<div class="compress">
+					<div class="compress">
 
-					<a>
-						<div class="img-container">
-							<img src="img/whatwedo/Mts-shocker-big1.jpg" class="img-responsive"/>
-						</div>
-						<div class="info">	
-							<h3 class="service-title seciotn-subheading">NEBS, TEST</h3>	
-							<p>NEBS Testing ,
-							Seismic
-							</p>
-						</div>
-					</a>
+						<a href="testService.html#SHOCK">
+							<div class="img-container">
+								<img src="img/whatwedo/Mts-shocker-big1.jpg" class="img-responsive"/>
+							</div>
+							<div class="info">
+								<h3 class="service-title seciotn-subheading">Shock, TEST</h3>	
+								<p>Linear and ,
+								Rotational
+								</p>
+							</div>
+						</a>
 					</div>
 				</div>
 				<div class="col-sm-4 service">
-								<div class="compress">
+					<div class="compress">
 
-					<a>
-						<div class="img-container">
-							<img src="img/whatwedo/Mts-shocker-big1.jpg" class="img-responsive"/>
-						</div>
-						<div class="info">	
-							<h3 class="service-title seciotn-subheading">Special Testing</h3>
-							<p>Acoustic, Solar ,
-							Testing, Fiber Optics ,
-							and more
-							</p>
-						</div>
-					</a>
+						<a href="testService.html#VIBRATION">
+							<div class="img-container">
+								<img src="img/whatwedo/Mts-shocker-big1.jpg" class="img-responsive"/>
+							</div>
+							<div class="info">	
+								<h3 class="service-title seciotn-subheading">Vibration, TEST</h3>	
+								<p>Linear and ,
+								Rotational
+								</p>
+							</div>
+						</a>
 					</div>
 				</div>
 				<div class="col-sm-4 service">
-								<div class="compress">
+					<div class="compress">
 
-					<a>
-						<div class="img-container">
-							<img src="img/whatwedo/Mts-shocker-big1.jpg" class="img-responsive"/>
-						</div>
-						<div class="info">	
-							<h3 class="service-title seciotn-subheading">Vibration, TEST</h3>	
-							<p>Linear and ,
-							Rotational
-							</p>
-						</div>
-					</a>
+						<a href="testService.html#NEBS">
+							<div class="img-container">
+								<img src="img/whatwedo/Mts-shocker-big1.jpg" class="img-responsive"/>
+							</div>
+							<div class="info">	
+								<h3 class="service-title seciotn-subheading">NEBS, TEST</h3>	
+								<p>NEBS Testing ,
+								Seismic
+								</p>
+							</div>
+						</a>
 					</div>
 				</div>
-				<div class="col-sm-4 col-lg-offset-4 service">
-								<div class="compress">
+				<div class="col-sm-4 service">
+					<div class="compress">
 
-					<a>
-						<div class="img-container">
-							<img src="img/whatwedo/Mts-shocker-big1.jpg" class="img-responsive"/>
-						</div>
-						<div class="info">
-							<h3 class="service-title seciotn-subheading">Shock, TEST</h3>	
-							<p>Linear and ,
-							Rotational
-							</p>
-						</div>
-					</a>
-								</div>
+						<a href="testService.html#BATTERY">
+							<div class="img-container">
+								<img src="img/whatwedo/Mts-shocker-big1.jpg" class="img-responsive"/>
+							</div>
+							<div class="info">	
+								<h3 class="service-title seciotn-subheading">Battery Testing</h3>
+								<p>something
+								</p>
+							</div>
+						</a>
+					</div>
+				</div>
+				<div class="col-sm-4 service">
+					<div class="compress">
+
+						<a href="testService.html#SPECIAL">
+							<div class="img-container">
+								<img src="img/whatwedo/Mts-shocker-big1.jpg" class="img-responsive"/>
+							</div>
+							<div class="info">	
+								<h3 class="service-title seciotn-subheading">Special Testing</h3>
+								<p>Acoustic, Solar ,
+								Testing, Fiber Optics ,
+								and more
+								</p>
+							</div>
+						</a>
+					</div>
+				</div>
+				<div class="col-sm-4 service">
+					<div class="compress">
+
+						<a >
+							<div class="img-container">
+								<img src="img/whatwedo/Mts-shocker-big1.jpg" class="img-responsive"/>
+							</div>
+							<div class="info">
+								<h3 class="service-title seciotn-subheading">Consulting Service</h3>	
+								<p>
+								something
+								</p>
+							</div>
+						</a>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -298,7 +325,9 @@
 							<div class="clearfix"></div>
 							<div class="col-lg-12 text-center">
 								<div id="success"></div>
-								<button type="submit" id="submit" class="btn btn-xl">Send Message</button>
+								<button type="submit" id="submit" class="btn btn-xl" style="font-size:40px;">
+									<span class="glyphicon glyphicon-envelope"></span> Send
+								</button>
 							</div>
 						</div>
 					</form>
@@ -361,25 +390,116 @@
 
 		<footer>
 		<div class="container">
-			<div class="row">
-				<div class="col-md-4">
-					<span class="copyright">Copyright &copy; Your Website 2014</span>
+			<div class="row text-left">
+				<div class="col-md-2 col-md-offset-2">
+					<h5 class="footer-title">Company</h5>
+					<ul class="footer-list">
+						<li>
+						<a>
+							Services
+						</a>
+						</li>
+						<li>
+						<a>
+							About
+						</a>
+						</li>
+						<li>
+						<a>
+							Contact
+						</a>
+						</li>
+						<li>
+						<a>
+							Accreditation
+						</a>
+						</li>
+
+					</ul>
 				</div>
-				<div class="col-md-4">
-					<ul class="list-inline social-buttons">
-						<li><a href="#"><i class="fa fa-twitter"></i></a>
+				<div class="col-md-2 footer-list">
+					<h5 class="footer-title">Services</h5>
+					<ul>
+						<li>
+						<a>
+							Vibration Test
+						</a>
 						</li>
-						<li><a href="#"><i class="fa fa-facebook"></i></a>
+						<li>
+						<a>
+							Shock Test
+						</a>
 						</li>
-						<li><a href="#"><i class="fa fa-linkedin"></i></a>
+						<li>
+						<a>
+							Chamber Test
+						</a>
+						</li>
+						<li>
+						<a>
+							Package Test
+						</a>
+						</li>
+						<li>
+						<a>
+							Special Test
+						</a>
+						</li>
+						<li>
+						<a>
+							ESS
+						</a>
+						</li>
+						<li>
+						<a>
+							NEBS Test
+						</a>
+						</li>
+						<li>
+						<a>
+							Battery Test
+						</a>
+						</li>
+						<li>
+						<a>
+							Consulting Services
+						</a>
 						</li>
 					</ul>
 				</div>
-				<div class="col-md-4">
-					<ul class="list-inline quicklinks">
-						<li><a href="#">Privacy Policy</a>
+				<div class="col-md-5 footer-list">
+					<h5 class="footer-title">Papers</h5>
+					<ul><li><a  href="Papers/ESS.pdf" target="_blank">Environmental Stress Screening    1994</a></li>
+						<li><a  href="Papers/ESS_Fixture.pdf" target="_blank">Experimental Skewed ESS Fixture   1994</a></li>
+						<li><a   href="Papers/Rotational_Shock.pdf" target="_blank">Rotational Shock and Vibration  1995</a></li>
+						<li><a   href="Papers/Improper_ESS.pdf" target="_blank">Improper Environment Stress Screening part I   1998</a></li>
+						<li><a   href="Papers/Improper_ESS_part_2.pdf" target="_blank">Improper Environment Stress Screening part II    1998</a></li>
+						<li><a   href="Papers/New ESS Approach - Color.pdf" target="_blank">New Approach for Production Line ESS     2005</a></li>
+						<li><a   href="Papers/" target="_blank">Comparison Testing of Shock Versus Vibration ESS System   2009</a></li>
+						<li><a   href="Papers/Huawei paper 08-12-09.pdf" target="_blank">How China's Largest Telecommunication Company is Leading the Way to Increased Product Reliability   2009</a></li>
+						<li><a   href="Papers/Which Vibratiom or Shock System is Best for HALT &amp; HESS.pdf" target="_blank">Which Vibration/Shock System is Best for HALT/HASS     2010</a></li>
+					</ul>
+
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-4 col-md-offset-4">
+					<p>open daily</p>
+					<p>8:30-18:00</p>
+					<p>(408) 988-0770</p>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-md-12">
+					<span class="copyright">&copy; Quanta Laboratories</span>
+				</div>
+				<div class="col-md-12">
+					<ul class="list-inline social-buttons">
+						<li><a href="#"><i class="fa fa-twitter"></i></a>
 						</li>
-						<li><a href="#">Terms of Use</a>
+						<li><a href="https://www.facebook.com/quantalabs"><i class="fa fa-facebook"></i></a>
+						</li>
+						<li><a href="#"><i class="fa fa-linkedin"></i></a>
 						</li>
 					</ul>
 				</div>
@@ -414,7 +534,7 @@
 
 		<!--form-->
 		<script src="js/form.js"></script>
-		
+
 		<!--animation-->
 		<script src="js/animation.js"></script>
 	</body>
