--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="description" content="">
-		<meta name="author" content="">
+		<meta name="author" content="KjB">
 
+		<link rel="shortcut icon" href="img/favicon.ico">
+		
 		<!-- Le styles -->
 		<link href="css/bootstrap.min.css" rel="stylesheet">
 		<link href="css/agency.css" rel="stylesheet">
