--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 					<a href="#page-top">Intro</a>
 					</li>
 					<li>
-					<a class="page-scroll " href="#services">Services</a>
+					<a class="page-scroll " href="testService.html">Services</a>
 					</li>
 					<li>
 					<a class="page-scroll" href="#about">About</a>
@@ -553,6 +553,6 @@
 		<script src="js/googlemap.js"></script>
 
 		<!--animation-->
-		<script src="js/animation.js"></script>
+		<script src="js/resize.js"></script>
 	</body>
 </html>
